JPackage Maven Plugin 2.0.0
* Maven 4, Java 17
* Drop parameters version check
* Drop obsolete jpackage options